--- a/src/styles/datailed.module.scss
+++ b/src/styles/datailed.module.scss
@@ -6,24 +6,69 @@
     height: 100%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
     gap: 30px;
-    .item1 {
-      order: 2;
-      width: 70%;
+    .child1 {
+      width: 100%;
       height: 100%;
-      h1 {
-        font-size: 25px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .item1 {
+        order: 2;
+        width: 70%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        h1 {
+          padding: 20px 0px;
+          font-size: 25px;
+          border-bottom: 3px solid #fff;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
       }
-      p {
-        font-size: 12px;
+      .table {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        div {
+          display: flex;
+          justify-content: space-between;
+          border-bottom: 1px solid #fff;
+          padding: 10px;
+        }
+      }
+      .item2 {
+        width: 20%;
+        height: 100%;
+        order: 1;
+        display: flex;
+        flex-direction: column;
+        margin-top: 50px;
+        div {
+          border: 2px solid white;
+          width: 100%;
+          height: 320px;
+          border-radius: 10px;
+          overflow: hidden;
+          img {
+            width: 100%;
+            height: 300px;
+          }
+        }
       }
     }
-    .item2 {
-      width: 20%;
+    .child2 {
+      width: 100%;
       height: 100%;
-      order: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
     }
   }
 }
