--- a/src/styles/datailed.module.scss
+++ b/src/styles/datailed.module.scss
@@ -64,11 +64,16 @@
       }
     }
     .child2 {
+      // background: red;
       width: 100%;
-      height: 100%;
+      height:100%;
       display: flex;
       flex-direction: column;
       gap: 20px;
+      .item3{
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
