--- a/src/components/Sidebar/index.module.scss
+++ b/src/components/Sidebar/index.module.scss
@@ -44,5 +44,12 @@
     font-size: 20px;
     display: flex;
     flex-direction: column;
+
+    li {
+      cursor: pointer;
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.082);
+      }
+    }
   }
 }
